[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aaus_llm"
version = "0.1.0" # Start with an initial version
description = "SDK ligero, asincrónico y extensible para interactuar con LLMs (OpenAI, Groq, Ollama)."
readme = "README.md"
requires-python = ">=3.8" # Asyncio features used suggest a reasonably modern Python
license = {text = "MIT License"} # Or choose another license like Apache-2.0
authors = [
  { name="Angel A. Urbina", email="angel.urbina.sanchez@gmail.com" }, 
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Adjust if you chose a different license
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    # IMPORTANT: The original code uses openai < 1.0 syntax.
    # If you want to use the latest openai (>=1.0), you need to refactor
    # the openai part of the code. Let's assume for now you want the code
    # as provided, which requires the older version.
    # If you update openai, change the dependency and the code below.
    "openai<1.0.0",
    # If you decide to update to openai >= 1.0.0, use this instead:
    # "openai>=1.0.0",
]

[project.urls] # Optional
"Homepage" = "https://github.com/tuusuario/aaus_llm" # Example URL
"Bug Tracker" = "https://github.com/tuusuario/aaus_llm/issues" # Example URL